WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303051
[blocks-in-inline] Client rects for inline box don't require special casing
https://bugs.webkit.org/show_bug.cgi?id=303051
Summary
[blocks-in-inline] Client rects for inline box don't require special casing
Antti Koivisto
Reported
2025-11-24 06:16:38 PST
Remove special case now that we have inline display boxes on block lines
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-24 06:16:52 PST
<
rdar://problem/165346690
>
Antti Koivisto
Comment 2
2025-11-24 06:18:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54415
EWS
Comment 3
2025-11-24 08:37:24 PST
Committed
303496@main
(adee794250ca): <
https://commits.webkit.org/303496@main
> Reviewed commits have been landed. Closing PR #54415 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug