[blocks-in-inline] Client rects for inline box don't require special casing https://bugs.webkit.org/show_bug.cgi?id=303051 rdar://165346690

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-client-rects.html
* LayoutTests/fast/inline/blocks-in-inline-client-rects-expected.txt: Added.
* LayoutTests/fast/inline/blocks-in-inline-client-rects.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h:
(WebCore::LayoutIntegration::InlineContent::traverseDescendantBlockLevelBoxes): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::inkOverflowBoundingBoxRectFor const):
(WebCore::LayoutIntegration::LineLayout::collectInlineBoxRects const):

We now have inline boxes on block lines. Remove the special case for getting them.
Ensure that empty <span></span> still returns a rect.

Canonical link: https://commits.webkit.org/303496@main