Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h
@@ -92,7 +92,6 @@ public:
     const InlineDisplay::Box* blockLevelBoxForLine(const InlineDisplay::Line&) const;
 
     template<typename Function> void traverseNonRootInlineBoxes(const Layout::Box&, Function&&);
-    template<typename Function> void traverseDescendantBlockLevelBoxes(const Layout::Box&, Function&&);
 
     const RenderBlockFlow& formattingContextRoot() const;
 
@@ -140,21 +139,6 @@ template<typename Function> void InlineContent::traverseNonRootInlineBoxes(const
 {
     for (auto index : nonRootInlineBoxIndexesForLayoutBox(layoutBox))
         function(displayContent().boxes[index]);
-}
-
-template<typename Function> void InlineContent::traverseDescendantBlockLevelBoxes(const Layout::Box& ancestor, Function&& function)
-{
-    if (!m_hasBlockLevelBoxes)
-        return;
-
-    for (auto& box : m_displayContent.boxes) {
-        if (!box.isBlockLevelBox())
-            continue;
-        CheckedRef layoutBox = box.layoutBox();
-        if (!layoutBox->isDescendantOfWithinFormattingContext(ancestor))
-            continue;
-        function(box);
-    }
 }
 
 }
