Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp
@@ -1114,9 +1114,6 @@ LayoutRect LineLayout::inkOverflowBoundingBoxRectFor(const RenderInline& renderI
     m_inlineContent->traverseNonRootInlineBoxes(layoutBox, [&](auto& inlineBox) {
         result.unite(Layout::toLayoutRect(inlineBox.inkOverflow()));
     });
-    m_inlineContent->traverseDescendantBlockLevelBoxes(layoutBox, [&](auto& inlineBox) {
-        result.unite(Layout::toLayoutRect(inlineBox.inkOverflow()));
-    });
     return result;
 }
 
@@ -1129,11 +1126,8 @@ Vector<FloatRect> LineLayout::collectInlineBoxRects(const RenderInline& renderIn
 
     Vector<FloatRect> result;
     m_inlineContent->traverseNonRootInlineBoxes(layoutBox, [&](auto& inlineBox) {
-        result.append(inlineBox.visualRectIgnoringBlockDirection());
-    });
-    m_inlineContent->traverseDescendantBlockLevelBoxes(layoutBox, [&](auto& inlineBox) {
         auto rect = inlineBox.visualRectIgnoringBlockDirection();
-        if (!rect.isEmpty())
+        if (result.isEmpty() || !rect.isEmpty())
             result.append(rect);
     });
     return result;
